--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,22 +1,76 @@
-.headerPart{
-    display: flex;
+body{
+    margin:0px;
+    padding: 0px;
+}
 
+nav{
+    display:flex;
+}
+
+li{
+    list-style: none;
 }
 
 .left{
-    width: 40%;
+    /* background-color: yellow; */
+    width:40% ;
+    height: auto;
+    /* align-items: center; */
 }
 
-ul{
-    display: flex;
+.left > .logo{
+    height: 90px;
+    padding: 20px;
 }
 
-.Right{
-   
+.right{
+    /* background-color: blue; */
     width:60%;
+    height:auto;
+    padding: 40px 80px;
 }
 
-.Header{
-    color:red
+.rightComp{
+    display:flex;
+    flex-direction:row;
+    justify-content: flex-end;
+    align-content:space-around;
+
 }
 
+.rightComp > li{
+    margin-left: 20px;
+}
+
+
+.messenger{
+    height:30px;
+
+
+}
+.avtarLogo{
+    vertical-align: middle;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.AccountHolderName{
+    margin-top:12px;
+}
+
+.afterHide{
+    display: none;
+}
+
+@media (max-width:700px){
+    .beforeHide{
+        display: none;
+
+    }
+    .afterHide{
+        /* display:block; */
+        display:flex;
+        justify-content: flex-end;
+    }
+}
